pulling in original merge changes