@@ -1,32 +1,30 @@
 package uk.gov.hmcts.reform.iacasedocumentsapi.domain.entities.payment;
 
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.junit.Assert.assertEquals;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import uk.gov.hmcts.reform.iacasedocumentsapi.domain.entities.fee.Fee;
-import uk.gov.hmcts.reform.iacasedocumentsapi.domain.entities.payment.CreditAccountPayment;
-import uk.gov.hmcts.reform.iacasedocumentsapi.domain.entities.payment.Currency;
-import uk.gov.hmcts.reform.iacasedocumentsapi.domain.entities.payment.Service;
 
 class CreditAccountPaymentTest {
 
-    private String accountNumber = "PBA0072626";
-    private BigDecimal amount = new BigDecimal("140.00");
-    private String caseReference = "caseReference";
-    private String ccdCaseNumber = "ccdCaseNumber";
-    private Currency currency = Currency.GBP;
-    private String customerReference = "customerReference";
-    private String description = "Some description";
-    private String organisationName = "immigration & asylum chamber";
-    private Service service = Service.IAC;
-    private String siteId = "AA001";
-    private List<Fee> fees = Arrays.asList(new Fee("FEE0123",
-        "Fee description", "1", new BigDecimal("140.00")));
+    private final String accountNumber = "PBA0072626";
+    private final BigDecimal amount = new BigDecimal("140.00");
+    private final String caseReference = "caseReference";
+    private final String ccdCaseNumber = "ccdCaseNumber";
+    private final Currency currency = Currency.GBP;
+    private final String customerReference = "customerReference";
+    private final String description = "Some description";
+    private final String organisationName = "immigration & asylum chamber";
+    private final Service service = Service.IAC;
+    private final String siteId = "AA001";
+    private final List<Fee> fees = List.of(new Fee(
+        "FEE0123",
+        "Fee description", "1", new BigDecimal("140.00")
+    ));
 
     private CreditAccountPayment creditAccountPayment;
 
@@ -45,17 +43,17 @@ class CreditAccountPaymentTest {
     @Test
     void should_hold_onto_values() {
 
-        assertEquals(creditAccountPayment.getAccountNumber(), accountNumber);
-        assertEquals(creditAccountPayment.getAmount(), amount);
-        assertEquals(creditAccountPayment.getCaseReference(), caseReference);
-        assertEquals(creditAccountPayment.getCcdCaseNumber(), ccdCaseNumber);
-        assertEquals(creditAccountPayment.getCurrency(), currency);
-        assertEquals(creditAccountPayment.getCustomerReference(), customerReference);
-        assertEquals(creditAccountPayment.getDescription(), description);
-        assertEquals(creditAccountPayment.getFees(), fees);
-        assertEquals(creditAccountPayment.getOrganisationName(), organisationName);
-        assertEquals(creditAccountPayment.getService(), service);
-        assertEquals(creditAccountPayment.getSiteId(), siteId);
+        Assertions.assertEquals(creditAccountPayment.getAccountNumber(), accountNumber);
+        Assertions.assertEquals(creditAccountPayment.getAmount(), amount);
+        Assertions.assertEquals(creditAccountPayment.getCaseReference(), caseReference);
+        Assertions.assertEquals(creditAccountPayment.getCcdCaseNumber(), ccdCaseNumber);
+        Assertions.assertEquals(creditAccountPayment.getCurrency(), currency);
+        Assertions.assertEquals(creditAccountPayment.getCustomerReference(), customerReference);
+        Assertions.assertEquals(creditAccountPayment.getDescription(), description);
+        Assertions.assertEquals(creditAccountPayment.getFees(), fees);
+        Assertions.assertEquals(creditAccountPayment.getOrganisationName(), organisationName);
+        Assertions.assertEquals(creditAccountPayment.getService(), service);
+        Assertions.assertEquals(creditAccountPayment.getSiteId(), siteId);
     }
 
     @Test
